--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
+    "karma-sauce-launcher": "^0.2.14",
     "mocha": "^2.3.3"
   },
   "dependencies": {
